F&GDEV/src/objects/AccountSales__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Production</relationshipLabel>
        <relationshipName>AccountSales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IssuedPolicies__c</fullName>
        <label>Issued Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IssuedWrittenPolicies__c</fullName>
        <label>Issued Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Code</label>
        <referenceTo>PlanCode__c</referenceTo>
        <relationshipLabel>Account Sales</relationshipLabel>
        <relationshipName>AccountSales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SuperMasterPlanMonth__c</fullName>
        <externalId>true</externalId>
        <label>Account Plan Month (ID)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAPAmount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAPPolicies__c</fullName>
        <label>TAP Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAPWrittenPolicies__c</fullName>
        <label>TAP Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Production</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account PlanCode Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Production</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>